themes/tundra/tundra.css
/* ... */
.tundra .dijitButtonDisabled .dijitButtonNode *,
.tundra .dijitToggleButtonDisabled .dijitButtonNode *,
.tundra .dijitDropDownButtonDisabled .dijitButtonNode *,
.tundra .dijitComboButtonDisabled .dijitButtonNode *,
.tundra .dijitSpinnerDisabled .dijitButtonNode * {
	filter: gray() alpha(opacity=50); /* IE */
}

.tundra .dijitButtonHover .dijitButtonNode,
.tundra .dijitToggleButtonHover .dijitButtonNode,
.tundra .dijitDropDownButtonHover .dijitButtonNode,
.tundra .dijitComboButtonHover .dijitButtonContents,
.tundra .dijitComboButtonDownArrowHover .dijitDownArrowButton,
.tundra .dijitComboBoxHover .dijitDownArrowButton,
.tundra .dijitSpinnerUpArrowHover .dijitUpArrowButton,
.tundra .dijitSpinnerDownArrowHover .dijitDownArrowButton {
	/* hover state - inner */
	/* TODO: change from Hover to Selected so that button is still highlighted while drop down is being used */
	border-color:#366dba;
	color:#366dba;
	background:#f1f6fc url("images/buttonHover.png") repeat-x bottom;
}

.tundra .dijitButtonActive .dijitButtonNode,
.tundra .dijitToggleButtonActive .dijitButtonNode,
.tundra .dijitDropDownButtonActive .dijitButtonNode,
.tundra .dijitComboButtonActive .dijitButtonContents,
.tundra .dijitDownArrowActive .dijitDownArrowButton,
.tundra .dijitComboBoxActive .dijitDownArrowButton {
	/* active state - inner (for when you are pressing a normal button, or
	 * when a toggle button is in a depressed state
	 */
	border-color:#366dba;
	background: #ededed url("images/buttonActive.png") bottom repeat-x;
}

.tundra .dijitToolbar {
	border: 1px solid #9b9b9b;
	background:#e9e9e9 url("images/buttonEnabled.png") repeat-x top;
}

.tundra .dijitToolbar * {
	padding: 0px;
	margin: 0px;
	#margin-top: -1px; /*IE*/
}
.dj_ie .tundra .dijitToolbar {
	padding-bottom: 1px;
}

.tundra .dijitToolbar .dijitButtonNode {
	padding: 0px;
	margin: 0px;
	border: 1px solid transparent;
	background: none;
}
.tundra .dijitToolbar .dijitToggleButtonChecked .dijitButtonNode {
	background-color:#C1D2EE;
	border:1px solid #316AC5;
}
.tundra .dijitToolbar .dijitToggleButtonCheckedHover .dijitButtonContents {
	border-color: #366dba;
	background-color:transparent;
}
.dj_ie6 .tundra .dijitToolbar .dijitButtonNode {
	/* workaround no transparent border support in IE6*/
	border-color: #e9e9e9;
}

.tundra .dijitToolbar .dijitButtonHover .dijitButtonNode,
.tundra .dijitToolbar .dijitToggleButtonHover .dijitButtonNode,
.tundra .dijitToolbar .dijitDropDownButtonHover .dijitButtonNode {
	/* TODO: change this from Hover to Selected so that button is still highlighted while drop down is being used */
	border-color: #366dba;
}
.dijitToolbarSeparator {
	background: url('images/editor.gif');
	height: 18px;
	width: 5px;
	padding: 0px 1px 0px 1px;
	margin: 0px;
}

.tundra .dijitToolbar .dijitToolbarSeparator {
	background: url('images/editor.gif');
}

/* ComboBox-icon-specific */
.tundra .dijitComboBox .dijitDownArrowButtonChar {
	/* visibility:hidden;  */
	display:none; 
}
.tundra .dijitComboBox .dijitDownArrowButtonInner {
	width:16px; 
	height:16px; 
	background:url("images/arrowDown.png") no-repeat center center; 
}
.dj_ie6 .tundra .dijitComboBox .dijitDownArrowButtonInner {
	background-image:url("images/arrowDown.gif"); 
}
.tundra .dijitComboBoxHover .dijitDownArrowButtonInner {
	/* TODO: url("images/arrowDownHover.png") but in IE6 it flickers some? */
}


/*****
		dijit.form.NumberSpinner
		override for the shorter stacked buttons
 *****/

.tundra .dijitSpinner .dijitButtonNode {
	padding: 0 .4em 0 .4em;
}


/****
		dijit.form.TextBox
		dijit.form.ValidationTextBox
		dijit.form.SerializableTextBox
		dijit.form.RangeBoundTextBox
		dijit.form.NumberTextBox
		dijit.form.CurrencyTextBox
		dijit.form.NumberSpinner
		dijit.form.ComboBox (partial)
 ****/

.tundra .dijitTextBox,
.tundra .dijitComboBox,
.tundra .dijitSpinner {
	margin: 0em 0.1em 0.2em 0.1em;
}

.tundra .dijitTextBox,
.tundra .dijitComboBox,
.tundra .dijitSpinner,
.tundra .dijitInlineEditor input,
.tundra .dijitTextarea {
	/* 	For all except dijit.form.NumberSpinner:  the actual input element.
		For TextBox, ComboBox, Spinner: the table that contains the input.
		Otherwise the actual input element.
	*/
	font-size: inherit;
	background:#fff url("images/validationInputBg.png") repeat-x top left;
	#background:#fff url('images/validationInputBg.gif') repeat-x top left; 
	border:1px solid #9b9b9b;
	line-height: normal;
}
.tundra .dijitComboBox .dijitButtonNode,
.tundra .dijitSpinner .dijitButtonNode {
	/* line between the input area and the drop down button */
	border-left:1px solid #9b9b9b;
}
.tundra .dijitSpinner .dijitDownArrowButton {
	border-top:1px solid #9b9b9b;	/* line between top and bottom arrow */
}

.tundra .dijitTextBoxFocused,
.tundra .dijitComboBoxFocused,
.tundra .dijitSpinnerFocused {
	/* input field when focused (eg: typing affects it) */
	border-color:#366dba;
	border-style:inset;
}

.tundra .dijitTextBoxError,
.tundra .dijitComboBoxError,
.tundra .dijitSpinnerError {
	border:1px solid #f3d118;
	background-color:#f9f7ba;
	background-image:none;
}

.tundra .dijitFormWidgetErrorFocus,
.tundra .dijitComboBoxErrorFocus,
.tundra .dijitSpinnerErrorFocus {
	background-color:#ff6;
	background-image:none;
}

/* Validation errors  */
.tundra .dijitValidationIcon {
	/* prevent height change when widget goes from valid to invalid state, and
	 * workaround browser (FF and safari) sizing bugs when last table column is empty or display:null
	 */
	display: block;
	width: 16px;
	height: 16px;
	background-repeat: no-repeat;
	background-image: url('images/warning.png');
	visibility: hidden;
}
.tundra .dijitValidationIconText {
	display: none;
}

.tundra .dijitTextBoxError .dijitValidationIcon,
.tundra .dijitComboBoxError .dijitValidationIcon,
.tundra .dijitSpinnerError .dijitValidationIcon {
	visibility: visible;
}
/* ... */

